CHANGES IN VERSION 2.19.0
-------------------------

NEW FEATURES

    o (2.19.2) Adds option ask to constructor. Default: True. Ask will ask user
    to create default AnnotationHub location and if in an non interactive
    session utilize a temporary directory. If False, the default directory is
    created and utilized without prompting.

USER-VISIBLE MODIFICATIONS

    o (2.19.1) Improve ERROR message when resource isn't found. Also involved
    updating RecordStatus function. If resource hasn't been completely removed
    from database, gives when the resource was removed. If the resource is
    available but after the snapshot date being utilized, specialized message.

CHANGES IN VERSION 2.17.0
-------------------------

NEW FEATURES

    o (2.17.6) remove debugging message of loading resource (`AH: 1`)
    o (2.17.5) system environment variable to control localHub option for
    creating hub based only on previously downloaded resources
    o (2.17.9) Allow force redownload of Hub sqlite file with refreshHub
    o (2.17.12) Only display download message when something to download.
    o (2.17.13) The output list of files is the AH/EH id not AHid:resourceid

BUG FIXES

    o (2.17.4) Fix localHub when no internet connection.  The internal use of
    isDevel was preventing Hub creation when no internet connection. Fixed by
    checking connection. This code pretained to orgDb filters
    o (2.17.8) On chance of very first download of hub failure, next call to
    construtor will redownload
    o (2.17.10) Fix ability to use hubs when offline
    o (2.17.11) Add BiocVersion to Imports. Fixes bug with R CMD check when
    testing if library can be loaded off search path. BiocManager doesn't Import
    BiocVersions and this is needed to get the correct BiocManager version of
    the snapshot date.

CHANGES IN VERSION 2.15.0
-------------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o (2.15.9) The Hubs have been updated to use BiocFileCache as a backend