@@ -41,6 +41,10 @@
 \alias{snapshotDate<-}
 \alias{snapshotDate<-,Hub-method}
 
+\alias{removeResources}
+\alias{removeResources,missing-method}
+\alias{removeResources,character-method}
+
 \alias{dbconn,Hub-method}
 \alias{dbfile,Hub-method}
 \alias{.db_close}
@@ -300,8 +304,14 @@
     \item{}{
       \code{cache(x)} and \code{cache(x) <- NULL}: Adds (downloads) all
       resources in \code{x}, or removes all local resources
-      corresponding to the records in \code{x} from the cache. In this case,
-      \code{x} would typically be a small subset of AnnotationHub resources.
+      corresponding to the records in \code{x} from the cache. In the later case,
+      \code{x} would typically be a small subset of AnnotationHub
+      resources. If \code{x} is a subset hub from a larger hub, and
+      \code{localHub=TRUE} was used to construct the hubs, 
+      the original object will need to be reconstructed to reflect the
+      removed resources. See also \code{removeResources} for a nicer interface
+      for removing cached resources, or \code{removeCache} for deleting the hub
+      cache entirely.
     }
     \item{}{
       \code{hubUrl(x)}:
@@ -318,6 +328,14 @@
       if calling the constructor (ie. AnnotationHub()). For force
       redownload specifically for AnnotationHub the base call should be
       \code{refreshHub(hubClass="AnnotationHub")}
+    }
+    \item{}{
+      \code{removeResources(hub, ids)}:
+      Removes listed ids from the local cache. ids are "AH" ids. Returns
+      an updated hub object. To work with updated hub object suggested
+      syntax is to reassign (ie. \code{hub = removeResources(hub,
+      "AH1")}). If ids are missing will remove all previously downloaded
+      local resources.
     }
     \item{}{
       \code{removeCache(x, ask=TRUE)}:
