@@ -3,6 +3,9 @@ CHANGES IN VERSION 2.19.0
 
 NEW FEATURES
 
+    o (2.19.3) New function removeResources for removing locally downloaded
+    cached resources. Nicer interface than using cache. Improved documentation
+    on use of setting a cache to NULL to also remove resources.
     o (2.19.2) Adds option ask to constructor. Default: True. Ask will ask user
     to create default AnnotationHub location and if in an non interactive
     session utilize a temporary directory. If False, the default directory is
